--- a/style.css
+++ b/style.css
@@ -18,8 +18,23 @@ section{
     background: linear-gradient(90deg, hsla(188, 97%, 58%, 1) 0%, hsla(205, 85%, 35%, 1) 100%);
     padding-bottom: 1px;
 }
-
+.laptops-section{
+    position: relative;
+width: 100%;
+height: 400px;
+}
 .laptops{
-display: flex;
+    display: flex;
+    width: 100%;
+    background-image:"https://picsum.photos/id/237/200/300" ;
+}
+.laptops-divider{
+    background:#6E8CC8;
+    height: 7px;
+    width: 100%;
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%,-50%);
+  
 
 }
