--- a/style.css
+++ b/style.css
@@ -1,27 +1,32 @@
+body{
+ background: url(./assets/hex-background.png);
+}
+
 .title{
     
     text-align: center;
     font-family:  Arial, sans-serif;
     font-size: 1.8em;
-    background: white;
     padding: 25px;
-    padding-bottom: 13px;
+    margin: 0;
 }
+
 section{
     width: 100%;
 }
+
 .title-divider{
     margin: 0 auto;
     width: 420px;
-    height: 75px;
     position: relative;
     background: linear-gradient(90deg, hsla(188, 97%, 58%, 1) 0%, hsla(205, 85%, 35%, 1) 100%);
-    padding-bottom: 1px;
+    height: 3px;
 }
+
 .laptops-section{
     position: relative;
-width: 100%;
-height: 400px;
+    width: 100%;
+    height: 400px;
 }
 .laptops{
     display: flex;
