--- a/style.css
+++ b/style.css
@@ -1,18 +1,19 @@
 body{
  background: url(./assets/hex-background.png);
+ font-family:  Arial, sans-serif;
+
 }
 
 .title{
     
     text-align: center;
-    font-family:  Arial, sans-serif;
     font-size: 1.8em;
-    padding: 25px;
-    margin: 0;
+    margin-top: 20;
+    margin-bottom: 10px;
 }
 
 section{
-    width: 100%;
+  width: 100%;
 }
 
 .title-divider{
@@ -26,20 +27,63 @@ section{
 .laptops-section{
     position: relative;
     width: 100%;
-    height: 400px;
+    margin-top:3.5em; 
+  
 }
 .laptops{
+    width: 80%;
+    margin:0 auto;
     display: flex;
-    width: 100%;
-    background-image:"https://picsum.photos/id/237/200/300" ;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
 }
 .laptops-divider{
     background:#6E8CC8;
     height: 7px;
     width: 100%;
     position: absolute;
-    top: 50%; left: 50%;
+    top: 58%; left: 50%;
     transform: translate(-50%,-50%);
   
 
+}
+.card{
+    width: 190px;
+    margin: 1em;
+}
+
+.secondary-card-title{
+    color:#405BCD;
+    text-align: center;
+    padding: 0;
+    margin: 0px;
+    margin-top: 30px;
+
+}
+
+
+.primary-card-title{
+    color:#11141D;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 20px;
+
+    
+
+}
+
+.card-image{
+    -webkit-filter: drop-shadow(5px 5px 5px #222);
+    filter:         drop-shadow(5px 5px 5px #222); 
+    height: 160px;
+    margin: 0 auto;
+    width: 160px;
+}
+.card-text{
+    text-align: center;
+    font-size: 0.8em;
+    color:HSL(240, 1%, 45%)
 }
