--- a/style.css
+++ b/style.css
@@ -1,27 +1,32 @@
 body{
  background: url(./assets/hex-background.png);
  font-family:  Arial, sans-serif;
-
+margin: 0;
 }
+
+
+section{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
 .title{
     
     text-align: center;
-    font-size: 1.8em;
-    margin-top: 20;
+    font-size: 1.5em;
+    margin-top: 20px;
     margin-bottom: 10px;
 }
 
-section{
-  width: 100%;
-}
 
 .title-divider{
     margin: 0 auto;
     width: 420px;
     position: relative;
     background: linear-gradient(90deg, hsla(188, 97%, 58%, 1) 0%, hsla(205, 85%, 35%, 1) 100%);
-    height: 3px;
+    height: 2px;
 }
 
 .laptops-section{
@@ -41,17 +46,16 @@ section{
 }
 .laptops-divider{
     background:#6E8CC8;
-    height: 7px;
+    height: 5px;
     width: 100%;
     position: absolute;
-    top: 58%; left: 50%;
+    top: 65%; left: 50%;
     transform: translate(-50%,-50%);
   
 
 }
 .card{
-    width: 190px;
-    margin: 1em;
+    margin: 0.1em;
 }
 
 .secondary-card-title{
@@ -60,6 +64,9 @@ section{
     padding: 0;
     margin: 0px;
     margin-top: 30px;
+    font-size: 1.2em;
+    font-weight: 500;
+    width: 170px;
 
 }
 
@@ -70,20 +77,39 @@ section{
     padding: 0;
     margin: 0;
     margin-bottom: 20px;
+    font-size: 1.2em;
+    font-weight: 500;
+    width: 170px;
 
-    
 
 }
 
 .card-image{
     -webkit-filter: drop-shadow(5px 5px 5px #222);
     filter:         drop-shadow(5px 5px 5px #222); 
-    height: 160px;
-    margin: 0 auto;
-    width: 160px;
+    width: 170px;
+    margin-left: 13px;
 }
 .card-text{
     text-align: center;
-    font-size: 0.8em;
-    color:HSL(240, 1%, 45%)
+    font-size: 0.7em;
+    margin: 0px;
+    color:HSL(240, 1%, 45%);
+    max-width: 35ch;
 }
+
+.button {
+    background-color: #3F5BCD;
+    border: none;
+    border-radius: 9px;
+    color: white;
+    width: 150px;
+    padding: 10px 20px;
+    text-align: center;
+    margin-top: 50px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 0.8rem;
+    -webkit-filter: drop-shadow(5px 5px 5px rgba(34, 34, 34, 0.596));
+    filter:         drop-shadow(5px 5px 5px rgba(34, 34, 34, 0.596)); 
+  }
