--- a/style.css
+++ b/style.css
@@ -113,3 +113,58 @@ section{
     -webkit-filter: drop-shadow(5px 5px 5px rgba(34, 34, 34, 0.596));
     filter:         drop-shadow(5px 5px 5px rgba(34, 34, 34, 0.596)); 
   }
+
+  footer{
+      height: 100px;
+      margin-top: 100px;
+      color: #FBF7F5;
+
+
+
+      background: hsla(269, 45%, 11%, 1);
+
+      background: linear-gradient(0deg, hsla(269, 45%, 11%, 1) 0%, hsla(235, 42%, 36%, 1) 100%);
+      
+      background: -moz-linear-gradient(0deg, hsla(269, 45%, 11%, 1) 0%, hsla(235, 42%, 36%, 1) 100%);
+      
+      background: -webkit-linear-gradient(0deg, hsla(269, 45%, 11%, 1) 0%, hsla(235, 42%, 36%, 1) 100%);
+      
+      filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#1B0F28", endColorstr="#353B82", GradientType=1 );
+    
+    }
+
+  .footer-content{
+    display: flex;
+    max-width: 65%;
+    margin: 0 auto;
+
+  }
+  .footer-header{
+      margin-top: 20px;
+    margin-bottom: 0px;
+
+    font-size: 1.2rem;
+    font-weight: 500;
+    letter-spacing: -1px;
+  }
+  .footer-divider{
+      margin:20px 30px;
+      border-left:1px solid #acadad; 
+      border-right:1px solid #acadad; 
+      height:50px;
+     
+  }
+  
+  .footer-text{
+      font-size: 0.6em;
+      max-width: 78ch;
+
+  }
+  footer .button{
+    border: none;
+    border-radius: 9px;
+    margin-top: 30px;
+    margin-left: 40px;
+    height: 40px;
+    display: inline-block;
+  }
