add new background

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
- background: url(./assets/hex-background.png);
+ background: url(./assets/hexagons-with-gradient.png);
  font-family:  Arial, sans-serif;
 margin: 0;
 }
