--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
  background: url(./assets/hexagons-with-gradient.png);
+ background-repeat: no-repeat;
+ background-size: 100%;
  font-family:  Arial, sans-serif;
 margin: 0;
 }
@@ -46,7 +48,7 @@ section{
 }
 .laptops-divider{
     background:#6E8CC8;
-    height: 5px;
+    height: 4px;
     width: 100%;
     position: absolute;
     top: 62%; left: 50%;
@@ -113,10 +115,15 @@ section{
     -webkit-filter: drop-shadow(5px 5px 5px rgba(34, 34, 34, 0.596));
     filter:         drop-shadow(5px 5px 5px rgba(34, 34, 34, 0.596)); 
   }
+  button:hover {
+    color: #001F3F;
+    background-color: #5f7beb;
+    cursor: pointer;
+}
 
   footer{
       height: 100px;
-      margin-top: 100px;
+      margin-top: 70px;
       color: #FBF7F5;
 
 
