--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
-body{
+html,body{
  background: url(./assets/hexagons-with-gradient.png);
  background-repeat: no-repeat;
  background-size: 100%;
  font-family:  Arial, sans-serif;
-margin: 0;
+
+margin:0;
+padding:0;
+height:100%;
 }
 
 
+#wrapper{
+    height:100%;
+    min-height:100%;
+    position:relative;
+
+}
 section{
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -117,7 +125,8 @@ section{
   }
 
   .button-section{
-      
+    padding:10px;
+    padding-bottom:160px; /* Height of the footer */
   }
 
   button:hover {
@@ -127,10 +136,11 @@ section{
 }
 
   footer{
-      height: 100px;
-      margin-top: 70px;
-      color: #FBF7F5;
-
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:160px; /* Height of the footer */
+    background:#6cf;
 
 
       background: hsla(269, 45%, 11%, 1);
