--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@ height:100%;
 
 
 #wrapper{
-    height:100%;
-    min-height:100%;
-    position:relative;
-
+  min-height: 100%;
+  height: auto !important;
+  height: 100%; 
+  margin: 0 auto -4em;
 }
 section{
     display: flex;
@@ -136,10 +136,7 @@ section{
 }
 
   footer{
-    position:absolute;
-    bottom:0;
-    width:100%;
-    height:160px; /* Height of the footer */
+    height: 7em;
     background:#6cf;
 
 
